      Continuation of [ticket:1300].
    
    - relations() now have greater ability to be "overridden",
      meaning a subclass that explicitly specifies a relation()
      overriding that of the parent class will be honored
      during a flush.  This is currently to support 
      many-to-many relations from concrete inheritance setups.
      Outside of that use case, YMMV.  [ticket:1477]

    - Improved error message when query() is called with
      a non-SQL /entity expression. [ticket:1476]
    
    - Using False or 0 as a polymorphic discriminator now
      works on the base class as well as a subclass.
      [ticket:1440]

    - Added enable_assertions(False) to Query which disables
      the usual assertions for expected state - used
      by Query subclasses to engineer custom state.
      [ticket:1424].  See
      http://www.sqlalchemy.org/trac/wiki/UsageRecipes/PreFilteredQuery
      for an example.
      
- sql
    - Fixed a bug in extract() introduced in 0.5.4 whereby
      the string "field" argument was getting treated as a 
      ClauseElement, causing various errors within more 
      complex SQL transformations.
      
    - Unary expressions such as DISTINCT propagate their 
      type handling to result sets, allowing conversions like
      unicode and such to take place.  [ticket:1420]
      
- ext
   - The collection proxies produced by associationproxy are now
     pickleable.  A user-defined proxy_factory however
     is still not pickleable unless it defines __getstate__
     and __setstate__. [ticket:1446]

   - Declarative will raise an informative exception if 
     __table_args__ is passed as a tuple with no dict argument.
     Improved documentation.  [ticket:1468]
     
0.5.5
=======
- general
    - unit tests have been migrated from unittest to nose.  See
      README.unittests for information on how to run the tests.
      [ticket:970]

- orm
    - The "foreign_keys" argument of relation() will now propagate